# YelpTestTask

./: README.md  pyproject.toml  requirements.txt
yelptesttask/: items.json  main.py  spider.py  spider_item.py  utils.py  yelp_selenium_parser.ipynb
