[tool.poetry]
name = "yelptesttask"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
selenium = "^4.12.0"
webdriver-manager = "^4.0.0"
typer = {extras = ["all"], version = "^0.9.0"}
scrapy = "^2.10.1"
colorlog = "^6.7.0"
ruff = "^0.0.287"
pyright = "^1.1.326"
black = "^23.7.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
